--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-experiments": "^5.1.0",
     "react-hot-toast": "^2.4.1",
     "resend": "^3.2.0",
     "tailwind-merge": "^2.2.1",
@@ -26,8 +27,8 @@
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.2.58",
+    "@types/react-dom": "^18.2.19",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
