--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
   },
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@react-email/components": "0.0.15",
+    "@react-email/components": "^0.0.11",
+    "@react-email/tailwind": "^0.0.14",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.3",
     "lucide-react": "^0.319.0",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18",
-    "react-experiments": "^5.1.0",
+    "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
-    "resend": "^3.2.0",
+    "resend": "^2.0.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
